# bgame

./: .gitignore  CMakeLists.txt  bgame.cmake
emscripten/: shell.js
include/bgame/: entrypoint.h  metrics.h  ui.h  utils.h
include/bgame/allocator/: frame.h  tracked.h
include/bgame/ui/: spacer.h  string.h
snippets/: empty_scene.c
src/: allocator.c  asset.c  collision.c  entrypoint.c  libs.c  log.c  metrics.c  scene.c  shader.c  ui.c
src/asset/: collision_shape.c  sprite.c
src/ui/: overlay.glsl
